--- a/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
@@ -46,23 +46,38 @@
                         <div class="space-40"></div>
                         <hr>
                         <section ng-show="widget.code.length">
-                            <h4>Code</h4>
-                            <label class="textarea">
-                                <textarea ng-model="widget.code.text" disabled rows="15" class="custom-scroll"></textarea>
-                                <textarea ng-model="widget.code.cleanText" ng-hide="widget" disabled></textarea>
-                            </label>
-                            <div class="note">
-                                View cannot be modified.
-                            </div>
-                        </section>
-                        <section ng-show="widget.code.length">
+                            <div class="space-20"></div>
                             <h3>Amount of row: <b><span ng-bind="widget.code.length"></span></b></h3>
                             <div class="alert alert-danger" ng-show="widget.code.length>1000">Alert! Big file. Operation can take some time</div>
                         </section>
+                        {#<table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered"></table>#}
                         <section ng-show="widget.code.length && widget.chartType==0">
                             <div ng-bind-html="widget.code.table"></div>
+
                         </section>
-                    </div>
+                        <section ng-show="widget.code.length && widget.chartType==1">
+                            <table datatable="ng" class="table table-bordered table-condensed">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>FirstName</th>
+                                    <th>LastName</th>
+                                    <th>address</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="row in widget.code.cleanText">
+                                    <td><span ng-bind="row.id"></span> </td>
+                                    <td><span ng-bind="row.name"></span> </td>
+                                    <td><span ng-bind="row.lastname"></span> </td>
+                                    <td><span ng-bind="row.address"></span> </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </section>
+
+
+
 
                     {# DB #}
                     <div ng-show="widget.source==2">
@@ -107,9 +122,15 @@
                                 <input
                                         type="checkbox"
                                         name="checkbox-inline"
-                                        checked="checked"
                                         ng-model="widget.realTime">
                                 <i></i>RealTime
+                            </label>
+                            <label class="checkbox">
+                                <input
+                                        type="checkbox"
+                                        name="checkbox-inline"
+                                        ng-model="widget.private">
+                                <i></i>Private
                             </label>
                         </div>
                     </section>
@@ -119,8 +140,8 @@
                     <h4>Report type</h4>
                         <div class="inline-group">
                             <label class="radio">
-                                <input type="radio" ng-model="widget.chartType" value="0" name="radio-inline" checked="checked">
-                                <i></i>Simple table</label>
+                                <input type="radio" ng-model="widget.chartType" value="0" name="radio-inline" checked>
+                                <i></i>Static table</label>
                             <label class="radio">
                                 <input type="radio" ng-model="widget.chartType" value="1" name="radio-inline">
                                 <i></i>Advanced table</label>
@@ -136,6 +157,18 @@
                             <label class="radio">
                                 <input type="radio" ng-model="widget.chartType" value="5" name="radio-inline">
                                 <i></i>Bar</label>
+                        </div>
+                    </section>
+                </fieldset>
+                <fieldset>
+                    <section ng-show="widget.code.length">
+                        <h4>Code</h4>
+                        <label class="textarea">
+                            <textarea ng-model="widget.code.text" disabled rows="15" class="custom-scroll"></textarea>
+                            <textarea ng-model="widget.code.cleanText" ng-hide="widget" disabled></textarea>
+                        </label>
+                        <div class="note">
+                            View cannot be modified.
                         </div>
                     </section>
                 </fieldset>
