--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
         'assets/vendor/ng-table/ng-table.css'
         'assets/vendor/nvd3/nv.d3.css'
         '@layout'
-        '@angular_datatables_css'
+        '@nggrid_css'
         filter='yui_css'
         %}
         <link rel="stylesheet" href="{{ asset_url }}" />
@@ -81,8 +81,7 @@
     'assets/vendor/ace-builds/src-min-noconflict/ace.js'
     'assets/vendor/angular-ui-ace/ui-ace.js'
     '@lodash'
-    '@datatables_js'
-    '@angular_datatables_js'
+    '@nggrid_js'
 
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
