--- a/src/Main/AdminBundle/Resources/public/css/main.css
+++ b/src/Main/AdminBundle/Resources/public/css/main.css
@@ -67,3 +67,13 @@ body {
     width: 100%;
     height: 300px
 }
+
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 100%;
+    height: 500px
+}
+
+/*.ngViewport {*/
+    /*overflow: hidden !important;*/
+/*}*/
