--- a/src/Main/AdminBundle/Resources/public/css/main.css
+++ b/src/Main/AdminBundle/Resources/public/css/main.css
@@ -1,7 +1,4 @@
-body {
-    padding-top: 60px;
-}
-
+@charset "UTF-8";
 .form-signin {
     max-width: 330px;
     padding: 15px;
@@ -65,11 +62,11 @@ body {
 
 .api-textarea {
     width: 100%;
-    height: 300px
+    height: 300px;
 }
 
 .gridStyle {
-    border: 1px solid rgb(212,212,212);
+    border: 1px solid rgb(212, 212, 212);
     width: 100%;
-    height: 500px
+    height: 500px;
 }
