--- a/src/Main/AdminBundle/Resources/views/Api/new.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Api/new.html.twig
@@ -18,6 +18,8 @@
     </div>
     <div ng-controller="NewApiCtrl" class="row ng-cloak">
         <div class="col-sm-7 col-md-7">
+            <div ng-show="canSaveApi" class="alert alert-success">Api looks OK! Now you can save changes</div>
+            <div ng-show="error" class="alert alert-danger">Api url or parameters are wrong</div>
             <form class="form-horizontal" name="form" novalidate="">
                 <div class="form-group">
                     <label for="address" class="col-sm-2 control-label">Name</label>
@@ -35,10 +37,13 @@
                 <div class="form-group" ng-repeat="item in params">
                     <label for="key" class="col-sm-2 control-label">Param <span ng-bind="$index + 1"></span> </label>
                     <div class="col-md-3">
-                        <input type="text" id="key" class="form-control" placeholder="key" ng-model="item.key">
+                        <input type="text" id="key" class="form-control" placeholder="key" ng-model="item.key" ng-disabled="item.disabled">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="value" ng-model="item.value">
+                        <input type="text" class="form-control" placeholder="value" ng-model="item.value" ng-disabled="item.disabled">
+                    </div>
+                    <div class="col-md-1">
+                        <button class="btn btn-danger" ng-hide="item.disabled" ng-click="removeParam($index)"><i class="glyphicon glyphicon-minus"></i> </button>
                     </div>
                 </div>
                 <div class="form-group">
@@ -48,8 +53,8 @@
                 </div>
                 <div class="space-10"></div>
                 <div class="form-group pull-right">
-                    <button class="btn btn-default">Test</button>
-                    <button class="btn btn-info" ng-click="saveApiSource()" ng-disabled="form.$invalid">Save</button>
+                    <button class="btn btn-default" ng-click="testApi()" ng-disabled="form.$invalid">Test</button>
+                    <button class="btn btn-info" ng-click="saveApiSource()" ng-disabled="!canSaveApi">Save</button>
                 </div>
             </form>
         </div>
