--- a/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/new.html.twig
@@ -54,6 +54,7 @@
         <div class="jarviswidget jarviswidget-sortable"
              data-widget-colorbutton="false"
              data-widget-editbutton="false"
+             ng-show="enabledCharts"
              role="widget">
 
             {# HEADER #}
