--- a/src/Main/AdminBundle/Resources/views/Widgets/edit.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/edit.html.twig
@@ -22,7 +22,7 @@
                 <form class="form-horizontal" name="form">
                     <div class="form-group">
                         <label for="title">Title</label>
-                        <input type="text" class="form-control" ng-model="widget.title" id="title" placeholder="Title" required="">
+                        <input type="text" class="form-control" ng-model="widget.title" id="title" placeholder="Title" required>
                     </div>
                     <div class="form-group">
                         <div class="btn-group" ng-model="button.checkbox" bs-checkbox-group>
