--- a/src/Main/AdminBundle/Resources/views/Widgets/footer_definition.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/footer_definition.html.twig
@@ -7,7 +7,11 @@
                     ng-click="saveWidget()"
                     ng-disabled="form.$invalid">Save
             </button>
-            <button class="btn btn-default">Render graph</button>
+            <button class="btn btn-default"
+                    ng-show="widget.functions || widget.functions==false"
+                    ng-disabled="form.$required"
+                    ng-click="getFunction(functions[widget.functions])">Render graph
+            </button>
             <button class="btn btn-default">Save template</button>
         </div>
     </div>
