--- a/src/Main/AdminBundle/Resources/views/Widgets/procedures.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/procedures.html.twig
@@ -1,19 +1,12 @@
 <form name="form">
 <section ng-show="widget.source==3 && widget.queryType==1">
     <label for="widgetFunctions">Available procedures</label>
-    <div class="input-group input-group-md">
-        <select ng-model="widget.functions"
-                class="form-control input-lg"
-                id="widgetFunctions"
-                ng-options="function.id as function.name for function in functions">
-        </select>
-        <span class="input-group-btn">
-    <button class="btn btn-primary btn-lg"
-            type="button"
-            ng-click="getFunction(functions[widget.functions])">Get
-    </button>
-        </span>
-    </div>
+    <select ng-model="widget.functions"
+            class="form-control input-lg"
+            id="widgetFunctions"
+            {#ng-options="function.id as (function.name + ' (' + functions.length + ')') for function in functions"#}
+            >
+    </select>
     <div class="space-20"></div>
     <div ng-repeat="function in functions[widget.functions]">
         <div ng-show="function.label">
@@ -27,6 +20,7 @@
                             <input ng-model="function.value"
                                    class="form-control space-10"
                                    placeholder="{{ '{{ function.type }}' }}"
+                                   required
                                    {#type=""#}
                                     >
                         </div>
